apps/arr/tautulli/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: arr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: tautulli
      app: tautulli
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tautulli
        app: tautulli
    spec:
      containers:
        - name: tautulli
          image: lscr.io/linuxserver/tautulli:2.14.3
          ports:
            - name: tautulli
              containerPort: 8181
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          hostPath:
            path: /var/mnt/data/persistence/arr/tautulli
            type: DirectoryOrCreate
