apps/arr/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli-service
  namespace: arr
  labels:
    app.kubernetes.io/name: tautulli
    app: tautulli
spec:
  ports:
    - port: 8181
      targetPort: tautulli
      name: tautulli
  selector:
    app.kubernetes.io/name: tautulli
    app: tautulli
